<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_add" android:title="@string/action_add"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_categories" android:title="@string/action_categories"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_stats_frequent" android:title="@string/action_stats_frequent"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_stats_longest" android:title="@string/action_stats_longest"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_stats_categories" android:title="@string/action_category_stats"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_category_diagram" android:title="@string/action_category_diagram"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
