<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context="devilseye.android.timetracker.RecordActivity">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_id"
                android:id="@+id/record_id"
                android:textSize="20sp" />

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/record_id"
            android:text="@string/description"
            android:id="@+id/description"
            android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:text="@string/dateStart"
                android:id="@+id/dateStart"
                android:textSize="20sp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateStart"
                android:text="@string/dateEnd"
                android:id="@+id/dateEnd"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateEnd"
                android:text="@string/duration"
                android:id="@+id/duration"
                android:textSize="20sp" />

            <de.timroes.android.listview.EnhancedListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/duration"
                android:id="@+id/images" />
</RelativeLayout>

