<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="devilseye.android.timetracker.AddRecordActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:padding="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/choose_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_category"
                android:layout_alignParentTop="true"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                android:layout_below="@+id/choose_category"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/choose_description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choose_description"
                android:textSize="20sp"
                android:layout_below="@+id/category"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_below="@+id/choose_description"
                android:layout_centerHorizontal="true"
                android:hint="@string/description" />

            <TextView
                android:id="@+id/choose_dateStart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choose_dateStart"
                android:textSize="20sp"
                android:layout_below="@+id/description"
                android:layout_centerHorizontal="true" />

            <DatePicker
                android:id="@+id/dateStart"
                android:layout_width="wrap_content"
                android:spinnersShown="true"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:layout_below="@+id/choose_dateStart"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/choose_timeStart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choose_timeStart"
                android:textSize="20sp"
                android:layout_below="@+id/dateStart"
                android:layout_centerHorizontal="true" />

            <TimePicker
                android:id="@+id/timeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose_timeStart"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/choose_dateEnd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choose_dateEnd"
                android:textSize="20sp"
                android:layout_below="@+id/timeStart"
                android:layout_centerHorizontal="true" />

            <DatePicker
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
                android:spinnersShown="true"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:layout_below="@+id/choose_dateEnd"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/choose_timeEnd"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choose_timeEnd"
                android:textSize="20sp"
                android:layout_below="@+id/dateEnd"
                android:layout_centerHorizontal="true" />

            <TimePicker
                android:id="@+id/timeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose_timeEnd"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
</ScrollView>

